--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h3>Laske</h3>
 <div class="kysymys">
   <span class="lauseke">1 * 1</span> =
-  <form><input type="number" class="vastaus" autofocus/></form>
+  <form><input type="number" pattern="[0-9]*" class="vastaus" autofocus/></form>
 </div>
 <div class="tulos"></div>
 <div style="display: inline-flex">
