--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
   <meta charset="UTF-8">
   <title>Kertotaulut</title>
   <link rel="stylesheet" href="kertotaulu.css"/>
+  <meta name="apple-mobile-web-app-capable" content="yes"/>
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
+  <meta name="viewport" content="width=device-width"/>
+  <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0"/>
 </head>
 <body>
 <h3>Laske</h3>
 <div class="kysymys">
   <span class="lauseke">1 * 1</span> =
-  <form><input type="number" pattern="[0-9]*" class="vastaus" autofocus/></form>
+  <form>
+    <input type="number" pattern="[0-9]*" class="vastaus" autofocus/>
+    <button type="submit">Laske</button>
+    </form>
 </div>
 <div class="tulos"></div>
 <div style="display: inline-flex">
